--- a/chart_storage.html
+++ b/chart_storage.html
@@ -168,25 +168,13 @@ function buildSummaryFile() {
  */
 function buildDetailFile() {
 	var detailData = window.chartWindow.detailData,
-		chartDetail = window.chartWindow.chartDetail,
-		blocks, row, block, date, mills, value, k = 0;
+		detailKeys = window.chartWindow.detailKeys,
+		row = ["index,date,storage usage(bytes)"];
 	
-	row = ["index,date,storage usage(bytes)"];
-	
-	if (chartDetail) {
-		blocks = chartDetail.keys;
+	for (var i=0, _i=detailKeys.length, j=0, mills; i<_i; i++, j++) {
+		mills = block[i];
 		
-		for (var i=0, _i=blocks.length; i<_i; i++) {
-			block = blocks[i];
-			
-			for (var j=0, _j=block.length; j<_j; j++) {
-				mills = block[j];
-				
-				date = new Date(mills);
-				
-				row[row.length] = [k++, ITAhM.util.toDateTimeString(date), detailData.get(mills)].join(",");
-			}
-		}
+		row[row.length] = [j, ITAhM.util.toDateTimeString(new Date(mills)), detailData.get(mills)].join(",");
 	}
 	
 	return row;
