--- a/demo.html
+++ b/demo.html
@@ -53,7 +53,7 @@ function connect() {
 			location.href = "itahm.html";
 		}
 		else {
-			alert("Demo 가능한 기간이 아닙니다.");
+			alert("Demo 가능한 기간이 아닙니다. ("+ status +")");
 			
 			location.href = "/";
 		}
