--- a/overview.html
+++ b/overview.html
@@ -163,17 +163,7 @@ img[src="img/favicon.png"] {
 				<li>기본적으로 제공되는 CISCO 스타일의 아이콘 이외에 사용자가 원하는 아이콘을 추가하거나 변경하여 사용할 수 있습니다.
 			</ul>
 			
-			<h2>IP주소 관리</h2>
-			<figure>
-				<img src="img/home/ip.png" width="790" height="210">
-				<figcaption>IP 목록</figcaption>
-			</figure>
-			<ul>
-				<li>모든 IP 네트워크 정보를 수집하고 각 네트워크에 속한 IP 주소를 MAC주소와 연결하여 보여줍니다.
-				<li>IP자원을 관리하는 용도로 사용할 수 있습니다.
-			</ul>
-			
-			<h2>이벤트 및 시스로그</h2>
+			<h2>이벤트</h2>
 			<figure>
 				<img src="img/home/event2.png" width="720" height="420">
 				<figcaption>이벤트 목록</figcaption>
@@ -181,7 +171,6 @@ img[src="img/favicon.png"] {
 			<ul>
 				<li>수집된 이벤트를 날짜별로 조회할 수 있습니다.
 				<li>이벤트 발생시 안드로이드 앱으로 이벤트를 전송해 주며 SMS서비스와 연동할 수 있습니다.
-				<li>시스로그 서버로 활용할 수 있습니다.
 			</ul>
 		
 			<h2>장치 목록 관리</h2>
@@ -222,30 +211,20 @@ img[src="img/favicon.png"] {
 			<h2>차별화</h2>
 			<ul>
 				<li>무한 확장 가능한 구성도
-				<ul>
-					<li>일부 제품들이 크기가 정해진 캔버스에 구성도를 그리는것과 달리 확대, 축소, 이동이 자유로운 무한 캔버스에 구성도를 그립니다.
-					<li>같은 이유로 구성도를 계층 구조로 그리지 않고 하나의 구성도에 모든 장치를 그려낸 후 원하는 부분만 확대하여 보거나 때로는 축소하여 전체 장치들의 연결 상태를 한눈에 확인할 수도 있습니다.
-				</ul>
+					<ul>
+						<li>일부 제품들이 크기가 정해진 캔버스에 구성도를 그리는것과 달리 확대, 축소, 이동이 자유로운 무한 캔버스에 구성도를 그립니다.
+						<li>같은 이유로 구성도를 계층 구조로 그리지 않고 하나의 구성도에 모든 장치를 그려낸 후 원하는 부분만 확대하여 보거나 때로는 축소하여 전체 장치들의 연결 상태를 한눈에 확인할 수도 있습니다.
+					</ul>
 				<li>간편한 기간별 성능 차트 조회
-				<ul>
-					<li>기간별 성능조회시 시작날짜와 마지막날짜를 직접 입력하거나 달력 컨트롤을 이용해 조회하는 일부 제품과 달리 마우스 드래그를 통해 간편히 조회할 수 있으며 기간 변경에 따른 차트 다시 그리기를 지연 없이 즉시 그려 냅니다.
-				</ul>
+					<ul>
+						<li>기간별 성능조회시 시작날짜와 마지막날짜를 직접 입력하거나 달력 컨트롤을 이용해 조회하는 일부 제품과 달리 마우스 드래그를 통해 간편히 조회할 수 있으며 기간 변경에 따른 차트 다시 그리기를 지연 없이 즉시 그려 냅니다.
+					</ul>
 				<li>장비 등록 절차
-				<ul>
-					<li>프로파일 개념을 도입하여 장치가 사용하는 모든 SNMP 정보를 미리 등록 해 두고 장치에 맞는 프로파일을 스스로 찾아 등록합니다.
-					<li>추가로 장비를 등록하는데 필요한 단 하나의 정보는 IP 주소 입니다.
-				</ul>
-				<li>IP 자원 관리
-				<ul>
-					<li>관리 대상 장치들로 부터 IP – MAC 정보를 수집하여 IP관리 도구를 제공합니다.
-					<li>IP 할당 시 사용하지 않는 IP를 검사하거나 IP로부터 MAC주소를 확인하는데 사용할 수 있습니다.
-				</ul>
-				<li>플러그인을 사용하지 않으므로 다음과 같은 단점도 존재합니다.
-				<ul>
-					<li>telnet 등과 같은 CLI 명령을 수행할 수 없습니다.
-					<li>리포트(보고서) 기능을 제공하지 않습니다.
-				</ul>
-				<li>가볍고 빠르게 동작하고 사용하기 쉬운 UI를 구현하였으므로 NMS 사용자가 원하는 모든 기능을 구현하지는 않았으나 요구에 따라 더 많은 기능을 추가할 수 있습니다.   
+					<ul>
+						<li>프로파일 개념을 도입하여 장치가 사용하는 모든 SNMP 정보를 미리 등록 해 두고 장치에 맞는 프로파일을 스스로 찾아 등록합니다.
+						<li>추가로 장비를 등록하는데 필요한 단 하나의 정보는 IP 주소 입니다.
+					</ul>
+				<li>가볍고 빠르게 동작하고 사용하기 쉬운 UI를 구현하였으므로 NMS 사용자가 원하는 모든 기능을 구현하지는 않았으나 요구에 따라 유연하게 더 많은 기능을 추가할 수 있습니다.   
 			</ul>
 		</article>
 	
