--- a/connect.html
+++ b/connect.html
@@ -164,12 +164,7 @@ function onConnect(e) {
 			sessionStorage.level = response.level;
 			sessionStorage.version = response.version;
 			
-			if ([MAJOR, MINOR, 3, REVISION].join(".") !== response.version) {
-				alert("에이전트에 중요한 변화가 적용된 업데이트가 있습니다.\n"
-						+[MAJOR, MINOR, 3, REVISION].join(".")+" 버전으로 업데이트하십시오.");
-			}
-			
-			window.location.href = "itahm.html";
+			window.location.href = [MAJOR, MINOR, 3, REVISION].join(".") === response.version? "itahm.html" :"update.html";
 		}
 		else if (status === 401) {
 			window.comment.textContent = "Incorrect username or password.";
@@ -226,8 +221,8 @@ function onConnect(e) {
 		<script src="js/object.js"></script>
 		<script>
 
-var MAJOR = 1,
-	MINOR = 4,
+var MAJOR = 2,
+	MINOR = 0,
 	REVISION = 0;
 	
 	var form = document.getElementById("form"),
