--- a/event_extra.html
+++ b/event_extra.html
@@ -13,6 +13,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	color: #fff;
+	margin: 0; padding: 0;
 }
 
 ul {
@@ -29,33 +30,33 @@ ul {
 	padding: 0; margin: 0;
 	display: flex;
 	align-items: center;
-	border: 1px solid transparent;
+	border-bottom: 1px solid #c1c3d1;
 }
 
-.item li {
-	padding: 3px;
+.item> li {
+	padding: .5em;
 	box-sizing: border-box;
 	overflow: hidden; text-overflow: ellipsis; white-space: nowrap;
 }
 
-.item li:nth-child(1) {
-	width: 60px;
+.item> li:nth-child(1) {
+	width: 100px;
 }
 
-.item li:nth-child(2) {
+.item> li:nth-child(2) {
 	flex: 1;
 }
 
-.item li:nth-child(3) {
+.item> li:nth-child(3) {
 	flex: 2;
 }
 
 .item.shutdown {
-	background-color: rgba(255, 0, 0, .2);
+	background-color: red;
 }
 
 .item.critical {
-	background-color: rgba(255, 255, 0, .2);
+	background-color: orange;
 }
 
 		</style>
@@ -77,7 +78,6 @@ if (top === window) {
 
 var date = document.getElementById("date"),
 	list = document.getElementById("list"),
-	item = document.querySelector(".item"),
 	today = new Date().setHours(0, 0, 0, 0);
 
 top.sendRequest({
