--- a/setting.html
+++ b/setting.html
@@ -24,7 +24,6 @@ body {
 
 ul {
 	list-style: none;
-	padding: 0;
 }
 
 .item {
@@ -52,6 +51,14 @@ ul {
 
 img[src="img/plus.png"]:hover {
 	cursor: pointer;
+}
+
+#dashboard {
+	position: relative;
+}
+
+#dashboard> input[type=submit] {
+	position: absolute; top: 50%; left: 200px;
 }
 
 .list {
@@ -183,6 +190,7 @@ function initConfig() {
 	
 	document.querySelector("input[name=clean]").value = configData.clean;
 	document.querySelector("select[name=interval]").value = configData.interval || 1;
+	document.querySelector("input[name=top]").value = configData.top || 10;
 	document.querySelector("select[name=display]").value = configData.display || "name";
 	document.getElementById("java").textContent = configData.java;
 	document.getElementById("version").textContent = configData.version;
@@ -312,6 +320,29 @@ function onModifyDashboard() {
 	});
 }
 
+function onModifyTopN (n) {
+	document.body.classList.add("loading");
+	
+	if (n < 1) {
+		n = 1;
+	}
+	else if (n > 10) {
+		n = 10;
+	}
+	
+	top.sendRequest({
+		command: "config",
+		key: "top",
+		value: n
+	}, function (response) {
+		document.body.classList.remove("loading");
+		
+		top.databases.config.top = n;
+		
+		alert("대쉬보드 Top N을 "+n+" 으로 변경하였습니다.");
+	});
+}
+
 function onModifyDisplay(display) {
 	document.body.classList.add("loading");
 	
@@ -419,13 +450,16 @@ function initialize() {
 	<body class="loading">
 		<div class="main content_width">
 			
-				<h2>일반</h2>
+				<h2>정보</h2>
 				<ul class="common">
 					<li>자바 버전 : <span id="java"></span>
 					<li>에이전트 버전 : <span id="version"></span>
 					<li>에이전트 저장공간 여유 : <span id="space"></span>
 					<li>데이터베이스 로드 : <span id="load"></span>
 					<li>관리 리소스 갯수 : <span id="resource"></span>
+				</ul>
+				<h2>일반</h2>
+				<ul class="common">
 					<li>
 						<form id="clean">
 							데이터 보관 기간(일) :
@@ -442,35 +476,61 @@ function initialize() {
 							</select>
 							<input type="submit" value="적용" disabled>
 						</form>
-				</ul>
-			</form>
-			<form id="display">
-				<h2>장비 표시</h2>
-				<ul>
 					<li>
-						<select name="display">
-							<option value="name" selected>장비명
-							<option value="address">IP 주소
-						</select>
-						<input type="submit" value="적용" disabled>
+						<form id="display">
+							표시 : 
+							<select name="display">
+								<option value="name" selected>장비명
+								<option value="address">IP 주소
+							</select>
+							<input type="submit" value="적용" disabled>
+						</form>
+					<li>
+						<form id="top">
+							Top N : 
+							<input type="number" min="1" max="10" name="top">
+							<input type="submit" value="적용" disabled>
+						</form>
 				</ul>
-			</form>
-			<form id="dashboard">
+			
+			
 				<h2>대쉬보드</h2>
-				<ul id="resources">
-					<li data-value="responseTime"><input type="checkbox" name="responseTime">응답속도
-					<li data-value="processor"><input type="checkbox" name="processor">프로세서 로드
-					<li data-value="memory"><input type="checkbox" name="memory">메모리 사용량
-					<li data-value="memoryRate"><input type="checkbox" name="memoryRate">메모리 사용율
-					<li data-value="storage"><input type="checkbox" name="storage">스토리지 사용량
-					<li data-value="storageRate"><input type="checkbox" name="storageRate">스토리지 사용율
-					<li data-value="throughput"><input type="checkbox" name="throughput">통신 사용량
-					<li data-value="throughputRate"><input type="checkbox" name="throughputRate">통신 사용율
-					<li data-value="throughputErr"><input type="checkbox" name="throughputErr">통신 오류
-					<li data-value="failureRate"><input type="checkbox" name="failureRate">snmp 오류
-				</ul>
-				<input type="submit" value="적용" disabled>
-			</form>
+				<form id="dashboard">
+					<ol id="resources">
+						<li data-value="responseTime">
+							<input type="checkbox" name="responseTime">
+							응답속도
+						<li data-value="processor">
+							<input type="checkbox" name="processor">
+							프로세서 로드
+						<li data-value="memory">
+							<input type="checkbox" name="memory">
+							메모리 사용량
+						<li data-value="memoryRate">
+							<input type="checkbox" name="memoryRate">
+							메모리 사용율
+						<li data-value="storage">
+							<input type="checkbox" name="storage">
+							스토리지 사용량
+						<li data-value="storageRate">
+							<input type="checkbox" name="storageRate">
+							스토리지 사용율
+						<li data-value="throughput">
+							<input type="checkbox" name="throughput">
+							통신 사용량
+						<li data-value="throughputRate">
+							<input type="checkbox" name="throughputRate">
+							통신 사용율
+						<li data-value="throughputErr">
+							<input type="checkbox" name="throughputErr">
+							통신 오류
+						<li data-value="failureRate">
+							<input type="checkbox" name="failureRate">
+							snmp 오류
+					</ol>
+					<input type="submit" value="적용" disabled>
+				</form>
+			
 			<form id="account">
 				<h2>계정 <input type="image" src="img/plus.png" title="계정 추가" disabled></h2>
 				<ul id="account_list" class="list"></ul>
@@ -511,6 +571,7 @@ function initialize() {
 						<span></span>
 				</ul>
 			</div>
+			
 		</div>
 		<script src="js/ITAhM.js"></script>
 		<script>
@@ -588,6 +649,12 @@ document.getElementById("display").onsubmit = function (e) {
 	e.preventDefault();
 	
 	onModifyDisplay(this.elements["display"]);
+};
+
+document.getElementById("top").onsubmit = function (e) {
+	e.preventDefault();
+	
+	onModifyTopN(this.elements["top"].value);
 };
 
 document.getElementById("dashboard").onsubmit = function (e) {
