--- a/map_base.html
+++ b/map_base.html
@@ -11,13 +11,13 @@
 
 body {
 	position: fixed; top: 0; right: 0; bottom: 0; left: 0;
-	background: url("img/world.png") no-repeat;
-	background-size: 100%;
+	background: url("img/world.png") no-repeat center center fixed;
+	background-size: cover;
 }
 
 body::before {
 	content: "";
-	position: fixed; top: 0; right: 0; bottom: 0; left: 0;
+	position: absolute; top: 0; right: 0; bottom: 0; left: 0;
 	background-color: rgba(0, 0, 0, 0.8);
 	z-index: -1;
 }
