--- a/map.html
+++ b/map.html
@@ -128,42 +128,6 @@ function onSetAlarm(ip){
 	top.showDialog.call(window, "critical_dialog.html", ip);
 }
 
-function test() {
-	var device, entry, i=1000;
-	
-	for (var ip in top.databases.device) {
-		device = top.databases.device[ip];
-		
-		if (device.name) continue;
-		
-		if (i-- < 0) break;
-		
-		for (var peer in device.ifEntry) {
-			delete top.databases.device[peer].ifEntry[ip];
-		}
-		
-		delete top.databases.device[ip];
-		delete top.databases.position[ip];
-	}
-	
-	var request = {
-			command: "push",
-			database: "position",
-			data: window.top.databases.position
-		};
-	
-	top.sendRequest(request, function (response) {
-		alert("구성의 변경사항을 저장하였습니다.");
-	});
-	
-	request.database = "device";
-	request.data = top.databases.device;
-	
-	top.sendRequest(request, function (response) {
-		alert("장비의 변경사항을 저장하였습니다.");
-	});
-}
-
 		</script>
 		
 		
@@ -178,7 +142,6 @@ function test() {
 			<button id="group"><img src="img/group.png" width="16px" height="16px" title="그룹 추가" class="root">그룹</button>
 			<button id="save"><img src="img/save.png" width="16px" height="16px" title="저장" class="root">저장</button>
 			<img id="edit" src="img/setting.png" width="28" height="28">
-			<!--button onclick="test()">test</button-->
 		</nav>
 		
 		<nav class="right">	
@@ -210,7 +173,12 @@ document.getElementById("group").onclick = function () {
 };
 
 document.getElementById("edit").onclick = function () {
-	editMode.classList.toggle("edit");
+	if (editMode.classList.contains("edit")) {
+		window.location.reload();
+	}
+	else {
+		editMode.classList.add("edit");
+	}
 };
 
 window.map.onload = function () {
