--- a/account_dialog.html
+++ b/account_dialog.html
@@ -120,6 +120,7 @@ body:not(.removable) .remove {
 			</form>
 		</div>
 		
+		<script src="js/md5.js"></script>
 		<script>
 
 if (top === window) {
@@ -160,7 +161,7 @@ function onApply(e) {
 	
 	put(username, {
 			username: username,
-			password: password.value,
+			password: hex_md5(password.value),
 			level: parseInt(form.elements.level.value)
 		});
 };
@@ -221,7 +222,6 @@ function initialize(username) {
 		form.elements.username.value = username;
 		form.elements.username.disabled = true;
 		
-		form.elements.password.value = account.password;
 		form.elements.level.value = account.level;
 		
 		document.body.classList.add("removable");
