--- a/map.html
+++ b/map.html
@@ -137,10 +137,10 @@ function onSetAlarm(ip){
 		
 		<iframe id="map" src="map_base.html"></iframe>
 		
-		<nav id="edit_mode">
-			<button id="add"><img src="img/add_device.png" width="16px" height="16px" title="장비 추가" class="root">추가</button>
-			<button id="group"><img src="img/group.png" width="16px" height="16px" title="그룹 추가" class="root">그룹</button>
-			<button id="save"><img src="img/save.png" width="16px" height="16px" title="저장" class="root">저장</button>
+		<nav id="edit_mode" class="root">
+			<button id="add"><img src="img/add_device.png" width="16px" height="16px" title="장비 추가">추가</button>
+			<button id="group"><img src="img/group.png" width="16px" height="16px" title="그룹 추가">그룹</button>
+			<button id="save"><img src="img/save.png" width="16px" height="16px" title="저장">저장</button>
 			<img id="edit" src="img/setting.png" width="28" height="28">
 		</nav>
 		
