--- a/dashboard.html
+++ b/dashboard.html
@@ -445,7 +445,7 @@ function initialize() {
 	
 	document.body.classList.remove("loading");
 	
-	//window.setInterval(update, 10000);
+	window.setInterval(update, 10000);
 }
 
 function createTopList(resource) {
