--- a/event_extra.html
+++ b/event_extra.html
@@ -8,7 +8,9 @@
 		
 		<style>
 @import "css/itahm.css";
+
 body {
+	font-size: 12px;
 	position: fixed; top: 0; right: 0; bottom: 0; left: 0;
 	display: flex;
 	flex-direction: column;
